--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-onclickoutside": "^6.9.0",
     "react-redux": "^7.1.0",
     "react-textarea-autosize": "^7.1.0",
     "redux": "^4.0.4"
