--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "@holochain/hc-redux-middleware": "^1.1.1",
     "@holochain/hc-web-client": "^0.5.0",
+    "@material-ui/core": "^4.6.1",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
