--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-dom": "^16.9.0",
     "react-onclickoutside": "^6.9.0",
     "react-redux": "^7.1.0",
+    "react-router-dom": "^5.1.2",
     "react-textarea-autosize": "^7.1.0",
     "redux": "^4.0.4"
   }
