--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@holochain/hc-web-client": "^0.5.0",
     "@material-ui/core": "^4.6.1",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.27",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
