--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-router-dom": "^5.1.2",
     "react-textarea-autosize": "^7.1.0",
     "react-with-direction": "^1.3.1",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "use-onclickoutside": "^0.3.1"
   }
 }
