--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@holochain/hc-redux-middleware": "^1.1.1",
     "@holochain/hc-web-client": "^0.5.0",
     "@material-ui/core": "^4.6.1",
+    "dagre": "^0.8.5",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.27",
