--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.7.4",
-    "@holochain/hc-redux-middleware": "^1.1.1",
+    "@holochain/hc-redux-middleware": "github:holochain/hc-redux-middleware#handle-reconnects",
     "@holochain/hc-web-client": "^0.5.0",
     "@material-ui/core": "^4.6.1",
+    "connoropolous-hc-redux-middleware": "^1.1.4",
     "dagre": "^0.8.5",
+    "diceware-word": "^1.0.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.27",
