--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "@holochain/hc-redux-middleware": "github:holochain/hc-redux-middleware#handle-reconnects",
     "@holochain/hc-web-client": "^0.5.0",
     "@material-ui/core": "^4.6.1",
-    "connoropolous-hc-redux-middleware": "^1.1.4",
+    "connoropolous-hc-redux-middleware": "1.1.6",
+    "connoropolous-hc-web-client": "^0.5.5",
     "dagre": "^0.8.5",
     "diceware-word": "^1.0.0",
     "lodash": "^4.17.15",
