--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.1.2",
     "react-textarea-autosize": "^7.1.0",
+    "react-transition-group": "^4.3.0",
     "react-with-direction": "^1.3.1",
     "redux": "^4.0.4",
     "use-onclickoutside": "^0.3.1"
