--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "webpack-dev-server --open --config webpack.dev.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.prod.js"
+    "build": "webpack --config webpack.prod.js",
+    "build-holoscape": "webpack --config webpack.holoscape.js"
   },
   "repository": {
     "type": "git",
@@ -41,6 +42,7 @@
     "connoropolous-hc-web-client": "0.5.6",
     "dagre": "^0.8.5",
     "diceware-word": "^1.0.0",
+    "electron": "8.2.3",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.27",
