--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "acorn",
-  "version": "0.0.1",
+  "name": "acorn-ui",
+  "version": "0.3.4",
   "description": "the most wonderful state of affairs tree",
   "scripts": {
     "start": "webpack-dev-server --open --config webpack.dev.js",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/h-be/acorn.git"
+    "url": "git+https://github.com/h-be/acorn-ui.git"
   },
   "keywords": [
     "workflow",
@@ -19,9 +19,9 @@
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/h-be/acorn/issues"
+    "url": "https://github.com/h-be/acorn-ui/issues"
   },
-  "homepage": "https://github.com/h-be/acorn#readme",
+  "homepage": "https://github.com/h-be/acorn-ui#readme",
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "7.5.5",
