--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
     "style-loader": "^1.0.0",
+    "terser": "4.4.2",
     "webpack": "4.41.3",
     "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.8.0",
-    "terser": "4.4.2",
+    "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
@@ -43,6 +43,7 @@
     "dagre": "^0.8.5",
     "diceware-word": "^1.0.0",
     "electron": "8.2.3",
+    "intersects": "^2.7.2",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.27",
