--- a/package.json
+++ b/package.json
@@ -37,9 +37,9 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.7.4",
-    "@holochain/conductor-api": "0.0.1-dev.9",
+    "@holochain/conductor-api": "0.0.1-dev.11",
     "@material-ui/core": "^4.6.1",
-    "connoropolous-hc-redux-middleware": "^1.1.21",
+    "connoropolous-hc-redux-middleware": "1.1.23",
     "core-js": "^3.6.5",
     "dagre": "^0.8.5",
     "diceware-word": "^1.0.0",
