--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "core-js": "^3.6.5",
     "dagre": "^0.8.5",
     "diceware-word": "^1.0.0",
+    "electron": "^11.2.1",
     "intersects": "^2.7.2",
     "lodash": "^4.17.19",
     "moment": "^2.24.0",
